# post-scarcity-rts

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/data/factions/: continuity.ron
crates/rts_core/: Cargo.toml
crates/rts_core/benches/: simulation.rs
crates/rts_core/src/: buildings.rs  combat.rs  components.rs  economy.rs  error.rs  factions.rs  lib.rs  map_generation.rs  math.rs  pathfinding.rs  player_facade.rs  production.rs  replay.rs  simulation.rs  systems.rs  unit_kind.rs
crates/rts_core/src/data/: building_data.rs  faction_data.rs  mod.rs  tech_data.rs  unit_data.rs
crates/rts_game/: Cargo.toml
crates/rts_game/assets/data/factions/: collegium.ron  continuity.ron  sculptors.ron  tinkers.ron  zephyr.ron
crates/rts_game/assets/scenarios/: skirmish_1v1.ron
crates/rts_game/assets/strategies/: economic.ron  rush.ron  turtle.ron
crates/rts_game/src/: ai.rs  bundles.rs  camera.rs  combat.rs  components.rs  construction.rs  data_loader.rs  debug_console.rs  economy.rs  input.rs  lib.rs  main.rs  plugins.rs  production.rs  render.rs  selection.rs  simulation.rs  sprites.rs  ui.rs  unit_utils.rs  victory.rs
crates/rts_game/tests/: balance_tests.rs  building_ghost_tests.rs  faction_data_tests.rs  outline_tests.rs  range_indicator_tests.rs  simulation_tests.rs  vfx_mapping_tests.rs  victory_tests.rs  visual_feedback_tests.rs
crates/rts_headless/: Cargo.toml
crates/rts_headless/src/: analyzer.rs  ascii_visualizer.rs  batch.rs  faction_loader.rs  game_runner.rs  lib.rs  main.rs  metrics.rs  protocol.rs  runner.rs  scenario.rs  screenshot.rs  spawn_generator.rs  strategies.rs  visual_rating.rs  visual_review.rs
crates/rts_server/: Cargo.toml
crates/rts_server/src/: lib.rs  lobby.rs  main.rs  network.rs
crates/rts_test_utils/: Cargo.toml
crates/rts_test_utils/src/: balance.rs  determinism.rs  fixtures.rs  lib.rs
crates/rts_tools/: Cargo.toml
crates/rts_tools/src/: lib.rs  main.rs  validate.rs
docs/: ROADMAP.md  github-labels.md  headless-playtesting-plan.md  index.md  review-2026-01-26.md  visual-review-criteria.md
docs/architecture/: overview.md  tech-stack.md
docs/architecture/decisions/: ADR-001-ecs-architecture.md  ADR-002-rust-bevy.md  ADR-003-fixed-point-math.md  ADR-004-workspace-structure.md  ADR-005-error-handling.md  ADR-006-tracing.md  ADR-007-unit-identity.md  README.md
docs/design/: campaign-structure.md  gdd.md
docs/design/factions/: collegium.md  continuity.md  sculptors.md  tinkers.md  zephyr.md
docs/design/systems/: ai-testing-and-toolchain.md  balance-testing.md  combat.md  economy.md  tech-trees.md  unit-roles-and-scale.md  vision-and-intel.md
docs/standards/: coding-standards.md  project-conventions.md  visual-quality-bar.md
tools/: generate_sprites.py  install-hooks.sh
