[workspace]
resolver = "2"
members = [
    "crates/rts_core",
    "crates/rts_game",
    "crates/rts_server",
    "crates/rts_tools",
    "crates/rts_test_utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Post-Scarcity RTS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/rts-game"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies (shared across crates)
bevy = { version = "0.14", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ron = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Deterministic math
fixed = "1.28"

# Networking
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "sync"] }
quinn = "0.11"

# Audio
kira = "0.9"

# Testing
criterion = "0.5"
proptest = "1.4"

# Internal crates (workspace members reference each other)
rts_core = { path = "crates/rts_core" }
rts_game = { path = "crates/rts_game" }
rts_server = { path = "crates/rts_server" }
rts_tools = { path = "crates/rts_tools" }
rts_test_utils = { path = "crates/rts_test_utils" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

# Profiles
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
