[workspace]
resolver = "2"
members = [
    "crates/rts_core",
    "crates/rts_game",
    "crates/rts_headless",
    "crates/rts_server",
    "crates/rts_tools",
    "crates/rts_test_utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Post-Scarcity RTS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/rts-game"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies (shared across crates)
bevy = { version = "0.14", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ron = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Deterministic math
fixed = "1.28"

# Networking
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "sync"] }
quinn = "0.11"

# Audio
kira = "0.9"

# Testing
criterion = "0.5"
proptest = "1.4"

# Internal crates (workspace members reference each other)
rts_core = { path = "crates/rts_core" }
rts_game = { path = "crates/rts_game" }
rts_headless = { path = "crates/rts_headless" }
rts_server = { path = "crates/rts_server" }
rts_tools = { path = "crates/rts_tools" }
rts_test_utils = { path = "crates/rts_test_utils" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Style lints - these are opinion/preference, not safety
doc_markdown = "allow"
unnested_or_patterns = "allow"
cast_lossless = "allow"
manual_range_contains = "allow"
match_same_arms = "allow"
redundant_else = "allow"
if_not_else = "allow"
match_bool = "allow"
single_match = "allow"
single_match_else = "allow"
needless_return = "allow"
let_and_return = "allow"
redundant_closure_for_method_calls = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
derivable_impls = "allow"

# Profiles
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
