[package]
name = "rts_core"
description = "Deterministic game simulation core - no rendering, no IO, no randomness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable debug assertions and additional validation
debug-validation = []

[dependencies]
serde.workspace = true
bincode.workspace = true
ron.workspace = true
thiserror.workspace = true
tracing.workspace = true
fixed.workspace = true

[dev-dependencies]
rts_test_utils.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "simulation"
harness = false

[lints]
workspace = true
