[package]
name = "rts_tools"
description = "Development tools - asset converters, map editor, data validators"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
rts_core.workspace = true
serde.workspace = true
ron.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
rts_test_utils.workspace = true

[lints]
workspace = true
